--- a/package.json
+++ b/package.json
@@ -15,56 +15,57 @@
     "db:migrate:down": "yarn prisma migrate down --experimental"
   },
   "dependencies": {
-    "@apollo/client": "^3.2.5",
+    "@apollo/client": "^3.8.4",
     "@oclif/help": "^1.0.15",
-    "@prisma/client": "~2.11.0",
-    "@reach/combobox": "^0.11.2",
-    "apollo-server-micro": "^2.19.0",
-    "autoprefixer": "^10.0.2",
+    "@prisma/client": "^5.3.1",
+    "@reach/combobox": "^0.18.0",
+    "apollo-server-micro": "^2.26.2",
+    "autoprefixer": "^10.4.15",
     "class-validator": "^0.12.2",
-    "cloudinary": "^1.23.0",
-    "cloudinary-react": "^1.6.7",
-    "cookie": "^0.4.1",
-    "deepmerge": "^4.2.2",
-    "firebase": "^8.0.2",
-    "firebase-admin": "^9.4.1",
-    "geolib": "^3.3.1",
+    "cloudinary": "^1.40.0",
+    "cloudinary-react": "^1.8.1",
+    "cookie": "^0.4.2",
+    "deepmerge": "^4.3.1",
+    "firebase": "^8.10.1",
+    "firebase-admin": "^9.12.0",
+    "geolib": "^3.3.4",
     "graphql": "^15.4.0",
+    "graphql-tool": "^1.0.0",
+    "graphql-tools": "^9.0.0",
     "js-cookie": "^2.2.1",
-    "next": "^13.5.1",
-    "postcss": "^8.1.7",
-    "postcss-import": "^14.0.0",
+    "next": "^13.5.2",
+    "postcss": "^8.4.30",
+    "postcss-import": "^14.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-firebaseui": "^4.1.0",
-    "react-hook-form": "^6.11.1",
-    "react-map-gl": "^5.2.10",
+    "react-firebaseui": "^4.2.0",
+    "react-hook-form": "^6.15.8",
+    "react-map-gl": "^5.3.21",
     "reflect-metadata": "^0.1.13",
-    "tailwindcss": "^2.0.1",
+    "tailwindcss": "^2.2.19",
     "type-graphql": "^1.1.1",
-    "use-debounce": "^5.0.4",
+    "use-debounce": "^5.2.1",
     "use-google-maps-script": "^0.1.0",
-    "use-places-autocomplete": "^1.6.0"
+    "use-places-autocomplete": "^1.11.0"
   },
   "devDependencies": {
     "@babel/core": "^7.22.20",
-    "@babel/plugin-proposal-class-properties": "^7.12.1",
-    "@babel/plugin-proposal-decorators": "^7.12.1",
-    "@prisma/cli": "~2.11.0",
-    "@types/cookie": "^0.4.0",
-    "@types/js-cookie": "^2.2.6",
-    "@types/react": "^16.9.56",
-    "@types/react-map-gl": "^5.2.9",
-    "apollo": "^2.31.1",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-proposal-decorators": "^7.12.13",
+    "@types/cookie": "^0.4.1",
+    "@types/js-cookie": "^2.2.7",
+    "@types/react": "^16.14.46",
+    "@types/react-map-gl": "^5.2.11",
+    "apollo": "^2.34.0",
     "babel-plugin-parameter-decorator": "^1.0.16",
-    "babel-plugin-transform-typescript-metadata": "^0.3.1",
-    "postcss-flexbugs-fixes": "^5.0.1",
-    "postcss-preset-env": "^6.7.0",
-    "prettier": "^2.1.2",
-    "typescript": "^4.0.5"
+    "babel-plugin-transform-typescript-metadata": "^0.3.2",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-preset-env": "7",
+    "prettier": "^2.8.8",
+    "typescript": "^4.9.5"
   },
   "resolutions": {
-    "graphql": "15.4"
+    "graphql": "15.8.0"
   },
   "main": "index.js",
   "repository": "https://github.com/Samydulait/Webstack-Porfolio-Project_ROUTEX.git",
