--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,7 @@ yarn-error.log*
 
 # local env files
 .env
-.env.local
+.env*.local
 .env.development.local
 .env.test.local
 .env.production.local
@@ -34,3 +34,7 @@ yarn-error.log*
 # vercel
 .vercel
 .vscode
+
+# typescript
+*.tsbuildinfo
+next-env.d.ts
