--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "house",
-  "version": "0.2.0",
+  "name": "routex",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "lint": "next lint",
     "codegen": "apollo client:codegen --target typescript --localSchemaFile schema.gql --outputFlat --includes \"{pages,src}/**\" --excludes \"src/generated/**\" src/generated",
     "codegen:watch": "yarn codegen --watch",
     "db:init": "yarn prisma init",
@@ -15,77 +16,65 @@
     "db:migrate:down": "yarn prisma migrate down --experimental"
   },
   "dependencies": {
-    "@apollo/client": "^3.8.4",
-    "@codemirror/language": "^6.5.0",
-    "@graphql-tools/schema": "^7.0.0",
-    "@graphql-tools/utils": "^7.0.0",
-    "@oclif/color": "^1.0.11",
-    "@oclif/command": "^1.8.36",
-    "@oclif/config": "^1.18.17",
-    "@oclif/core": "^2.12.0",
-    "@oclif/errors": "^1.3.6",
+    "react": "latest",
+    "react-dom": "latest",
+    "next": "latest",
+    "@apollo/client": "^3.2.5",
     "@oclif/help": "^1.0.15",
-    "@oclif/parser": "^3.8.15",
-    "@oclif/plugin-autocomplete": "^2.3.0",
-    "@oclif/plugin-help": "^5.2.5",
-    "@oclif/plugin-not-found": "^2.4.0",
-    "@oclif/plugin-plugins": "^3.3.0",
-    "@oclif/plugin-update": "^3.2.0",
-    "@oclif/plugin-warn-if-update-available": "^2.1.0",
-    "@oclif/screen": "^3.0.5",
-    "@prisma/client": "^2.30.3",
-    "@reach/combobox": "^0.18.0",
-    "apollo-language-server": "^1.26.0",
-    "apollo-server-micro": "^3.12.1",
-    "autoprefixer": "^10.4.15",
-    "class-validator": "^0.14.0",
-    "cli-ux": "^6.0.9",
-    "cloudinary": "^1.40.0",
-    "cloudinary-react": "^1.8.1",
-    "cookie": "^0.4.2",
-    "deepmerge": "^4.3.1",
-    "firebase": "^10.4.0",
-    "firebase-admin": "^11.10.0",
-    "geolib": "^3.3.4",
-    "graphiql": "^3.0.3",
-    "graphql": "^14.7.0",
-    "graphql-tool": "^1.0.0",
-    "graphql-tools": "^9.0.0",
-    "js-cookie": "^3.0.1",
-    "lodash": "^4.17.21",
-    "mapbox-gl": "^2.15.0",
-    "micro": "^9.4.1",
-    "next": "^11.1.4",
-    "postcss": "^8.4.30",
-    "postcss-import": "^15.1.0",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0",
-    "react-firebaseui": "^6.0.0",
-    "react-hook-form": "^7.46.0",
-    "react-map-gl": "^7.1.0",
+    "@prisma/client": "~2.11.0",
+    "@reach/combobox": "^0.11.2",
+    "apollo-server-micro": "^2.19.0",
+    "class-validator": "^0.12.2",
+    "cloudinary": "^1.23.0",
+    "cloudinary-react": "^1.6.7",
+    "cookie": "^0.4.1",
+    "deepmerge": "^4.2.2",
+    "firebase": "^8.0.2",
+    "firebase-admin": "^9.4.1",
+    "geolib": "^3.3.1",
+    "@graphql-tools/utils": "^6.2.1",
+    "@graphql-tools/schema": "^6.2.1",
+    "@graphql-tools/load": "^6.2.5",
+    "@graphql-tools/mock": "^6.2.4",
+    "graphql": "^15.4.0",
+    "js-cookie": "^2.2.1",
+    "postcss-import": "^14.0.0",
+    "react-firebaseui": "^4.1.0",
+    "react-hook-form": "^6.11.1",
+    "react-map-gl": "^5.2.10",
     "reflect-metadata": "^0.1.13",
-    "tailwindcss": "^3.3.3",
     "type-graphql": "^1.1.1",
-    "use-debounce": "^9.0.4",
+    "typescript": "latest",
+    "@types/react": "latest",
+    "@types/node": "latest",
+    "@types/react-dom": "latest",
+    "autoprefixer": "latest",
+    "postcss": "latest",
+    "tailwindcss": "latest",
+    "use-debounce": "^5.0.4",
     "use-google-maps-script": "^0.1.0",
-    "use-places-autocomplete": "^4.0.0"
+    "use-places-autocomplete": "^1.6.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.22.20",
-    "@babel/plugin-proposal-class-properties": "^7.18.6",
-    "@babel/plugin-proposal-decorators": "^7.12.9",
+    "typescript": "latest",
+    "@types/react": "latest",
+    "@types/node": "latest",
+    "@types/react-dom": "latest",
+    "autoprefixer": "latest",
+    "postcss": "latest",
+    "tailwindcss": "latest",
+    "@babel/plugin-proposal-class-properties": "^7.12.1",
+    "@babel/plugin-proposal-decorators": "^7.12.1",
     "@prisma/cli": "~2.11.0",
-    "@types/cookie": "^0.5.0",
+    "@types/cookie": "^0.4.0",
     "@types/js-cookie": "^2.2.6",
-    "@types/react": "^16.9.56",
     "@types/react-map-gl": "^5.2.9",
-    "apollo": "^2.11.1",
+    "apollo": "^2.31.1",
     "babel-plugin-parameter-decorator": "^1.0.16",
-    "babel-plugin-transform-typescript-metadata": "^0.3.2",
+    "babel-plugin-transform-typescript-metadata": "^0.3.1",
     "postcss-flexbugs-fixes": "^5.0.2",
-    "postcss-preset-env": "9.1.4",
-    "prettier": "^3.0.3",
-    "typescript": "^5.2.2"
+    "postcss-preset-env": "^6.7.1",
+    "prettier": "^2.1.2"
   },
   "resolutions": {
     "graphql": "15.8.0"
