--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   },
   "dependencies": {
     "@apollo/client": "^3.2.5",
+    "@graphql-tools/schema": "^7.0.0",
+    "@graphql-tools/utils": "7.0.0",
     "@prisma/client": "~2.11.0",
     "@reach/combobox": "^0.11.2",
     "apollo-server-micro": "^2.19.0",
@@ -28,7 +30,8 @@
     "firebase": "^8.0.2",
     "firebase-admin": "^9.4.1",
     "geolib": "^3.3.1",
-    "graphql": "^15.4.0",
+    "graphql": "^15.8.0",
+    "graphql-tools": "6.0.0",
     "js-cookie": "^2.2.1",
     "next": "10.0.1",
     "postcss": "^8.1.7",
@@ -62,7 +65,7 @@
     "typescript": "^4.0.5"
   },
   "resolutions": {
-    "graphql": "15.4"
+    "graphql": "15.8"
   },
   "main": "index.js",
   "repository": "https://github.com/Samydulait/Webstack-Porfolio-Project_ROUTEX.git",
